--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=" "
+DATABASE_URL=postgresql://postgres.amqehuyvclguwtmxmjnz:D1BehTsndMw04JaI@aws-1-ap-south-1.pooler.supabase.com:6543/postgres
