--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/supabase-js": "^2.84.0",
-    "@vercel/analytics": "^1.3.1",
+    "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -60,7 +60,8 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "3.25.76"
+    "zod": "3.25.76",
+    "tw-animate-css": "1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
@@ -71,7 +72,6 @@
     "eslint-config-next": "16.0.4",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
-    "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
 }
